# serve

./: .gitignore  Cargo.toml  notes.md  rust-passes.md
libserve/: Cargo.toml
libserve/src/: ast.rs  helpers.rs  lib.rs  parser.rs  static_environment.rs  symbol.rs
libserve/src/semantic/: context.rs  environment.rs  ir.rs  mod.rs  scan.rs  type_check.rs  type_registrar.rs  types.rs
serve_runtime/: Cargo.toml
serve_runtime/src/: app.rs  environment.rs  exposed_function_registry.rs  lib.rs  types.rs
servec/: Cargo.toml  build.sh  run_tests.sh  test.srv
servec/examples/: x.rs
servec/src/: ast.rs  codegen.rs  compiler.rs  helpers.rs  main.rs  parser.rs  semantic.rs  static_environment.rs  symbol.rs
servec/src/semantic/: context.rs  scan.rs  type_check.rs
servec/tests/: v1.srv  v2.srv
src/: ast.rs  compiler.rs  helpers.rs  lib.rs  main.rs  parser.rs  source_file.rs
tester/: Cargo.toml
tester/src/: collector.rs  compile_fail.rs  compile_pass.rs  main.rs  test_case.rs
tester/tests/compile-fail/: application-invalid-host.srv  bad-return-type.srv  conditional-mismatch-types.srv  conditional-predicate-type-checked.srv  function-def-call-bad-args.srv  garbage.srv  invalid_application_function.srv  invalid_endpoint_typechecl.srv  return-in-expr-ctx.srv
tester/tests/compile-pass/: application-function-def-call-in-endpoint.srv  application-function-def-call.srv  application-function.srv  application-multiple-endpoints.srv  application-with-endpoint.srv  assignment.srv  conditional-nested.srv  conditional-one-line-nested.srv  conditional.srv  (+13 more)
tests/: v1.srv
