[package]
name = "servec"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]

[features]
default = ["aster/with-syntex", "syntex_syntax"]
nightly = []

[dependencies]
aster = { version = "*", default_features = false }
clap = "*"
env_logger = "*"
itertools = "*"
log = "0.3"
nom = "^2.2"
serve_runtime = { path = "../serve_runtime" }
syntex_syntax = { version = "*", optional = true }

tempfile = "*"
